--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "aticmatic/envato-php",
+    "name": "aticmatic/envatophp",
     "description": "A Laravel package for interacting with the Envato API.",
     "type": "library",
     "license": "MIT", // Choose your license (e.g., MIT, GPL, etc.)
