--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "aticmatic/envatophp",
     "description": "A Laravel package for interacting with the Envato API.",
     "type": "library",
-    "license": "MIT", // Choose your license (e.g., MIT, GPL, etc.)
+    "license": "MIT",
     "authors": [
         {
             "name": "AticmAtic",
