Update minimum stability in composer.json to allow development versions

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
             "AticMatic\\EnvatoPHP\\Tests\\": "tests/"
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "extra": {
         "laravel": {
